js262/test/language/statements/variable/eval-strict-list-repeated.js


/*---
es5id: 12.2.1-31-s
esid: sec-variable-statement
description: >
    eval as local var identifier defined twice throws SyntaxError in
    strict mode
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var eval, eval;
